--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -13,7 +13,7 @@
         </p>
         <div id="tab-villa" class="tab-pane active container">
 
-            <form action="/AssetAdvs/Search1" method="POST">
+            <form action="/AssetAdvs/Search" method="POST">
                 <div style="background-color:antiquewhite; width:25%;float:left;">
                     <div>
                         <div>
