--- a/DariTn/Views/AssetAdvs/Create.cshtml
+++ b/DariTn/Views/AssetAdvs/Create.cshtml
@@ -16,13 +16,13 @@
 
 
 <div class="form-horizontal">
-    <h4>AssetAdv</h4>
+    <h4>Post your own advertisement for your property !</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Description: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
@@ -30,17 +30,23 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Type: (<b>Apartment</b>, <b>House</b>, <b>Land</b>, <b>Office</b>)</div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
         </div>
     </div>
-
+    <div class="form-group">
+        <div class="control-label col-md-2">Is this property for <b>Rent</b> or <b>Sale</b> ? </div>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Price: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
@@ -48,7 +54,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.surface, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Surface: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.surface, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.surface, "", new { @class = "text-danger" })
@@ -56,7 +62,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.street, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Street: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.street, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.street, "", new { @class = "text-danger" })
@@ -64,7 +70,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.city, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">City: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.city, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.city, "", new { @class = "text-danger" })
@@ -72,7 +78,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">State: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.state, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
@@ -80,7 +86,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.postalCode, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Postal Code: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.postalCode, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.postalCode, "", new { @class = "text-danger" })
@@ -88,7 +94,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.nbrRooms, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Number of rooms: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.nbrRooms, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.nbrRooms, "", new { @class = "text-danger" })
@@ -97,7 +103,7 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.nbrFloor, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Number of floors: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.nbrFloor, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.nbrFloor, "", new { @class = "text-danger" })
@@ -105,7 +111,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.floor, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Located in floor: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.floor, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.floor, "", new { @class = "text-danger" })
@@ -113,7 +119,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.nbrBathrooms, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Number of bathrooms: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.nbrBathrooms, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.nbrBathrooms, "", new { @class = "text-danger" })
@@ -121,7 +127,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.furnished, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Is this property furnished ? </div>
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.furnished)
@@ -131,7 +137,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.garage, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Does this property have a garage ? </div>
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.garage)
@@ -141,7 +147,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.parking, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Does this property have a parking spot </div>
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.parking)
@@ -151,7 +157,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.pool, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Is there a pool in this property ? </div>
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.pool)
@@ -160,30 +166,17 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.category, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.category, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.category, "", new { @class = "text-danger" })
-        </div>
-    </div>
+
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.capacity, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="control-label col-md-2">Capacity: </div>
         <div class="col-md-10">
             @Html.EditorFor(model => model.capacity, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.capacity, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.availability, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.availability, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.availability, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
@@ -194,7 +187,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to browsing", "Index",null,new { @class = "btn btn-primary btn-lg" })
 </div>
 
 @section Scripts {
