--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
                                 <li> @Html.ActionLink("Ads based on your search history", "Target1", "AssetAdvs")</li>
                                 <li> @Html.ActionLink("Ads based on your location", "Target2", "AssetAdvs")</li>
-                                <li> @Html.ActionLink("Assets near you", "#", "#")</li>
+                                <li> @Html.ActionLink("Assets near you", "Near", "AssetAdvs")</li>
                             </ul>
                         </div>
                     </li>
