--- a/DariTn/Views/Appointments/Delete.cshtml
+++ b/DariTn/Views/Appointments/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DariTn.Models.Entities.TimeSlots
+﻿@model DariTn.Models.Entities.Appointment
 
 @{
     ViewBag.Title = "Delete";
@@ -8,33 +8,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TimeSlots</h4>
+    <h4>Appointment</h4>
     <hr />
     <dl class="dl-horizontal">
-      
-
         <dt>
-            @Html.DisplayNameFor(model => model.hdebut)
+            @Html.DisplayNameFor(model => model.TimeSlots.title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.hdebut)
+            @Html.DisplayFor(model => model.TimeSlots.title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hfin)
+            @Html.DisplayNameFor(model => model.Date)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.hfin)
+            @Html.DisplayFor(model => model.Date)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayNameFor(model => model.place)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.title)
+            @Html.DisplayFor(model => model.place)
         </dd>
 
     </dl>
