--- a/DariTn/Views/TimeSlots/Edit.cshtml
+++ b/DariTn/Views/TimeSlots/Edit.cshtml
@@ -16,13 +16,6 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.hdebut, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.asset.id, "idasset", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.idasset, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.asset.id, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.asset.id, "", new { @class = "text-danger" })
             </div>
         </div>
