--- a/DariTn/Views/FurnitureAdvs/Index2.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Index2.cshtml
@@ -12,7 +12,7 @@
     <br>
     <h3 class="color0" , style="color:crimson">Add New Furniture: </h3>
     
-    <button class="button button6">  @Html.ActionLink("To Add New Furniture Clic Here", "Create")</button>
+    <button class="button button6">  @Html.ActionLink("Post Your Advertisement", "Create")</button>
     
     <h3 class="color0" , style="color:crimson">Furnitures For Sale: </h3>
     <div id="selling" class="second-theme-selling">
