--- a/DariTn/Views/FurnitureAdvs/Create.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Create.cshtml
@@ -11,7 +11,7 @@
     <br>
     <br>
     <br>
-    <h3 class="color0" , style="color:crimson"> Add Furniture : </h3><hr />
+    <h3 class="color0" , style="color:crimson"> Post Furniture Advertisement : </h3><hr />
     <div class="form-horizontal" style="border-radius: 5px; background-color: #f2f2f2; padding: 5px;">
 
         
