--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -108,8 +108,8 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Credits</a></li>
-                    <li class="lBorder"><a class="page-scroll" href="#">Insurance</a></li>
+                    <li class="lBorder">@Html.ActionLink("Credits", "Index", "Credits", new { client= 1 }, null)</li>
+                    <li class="lBorder">@Html.ActionLink("Insurances", "Index", "Insurances", new { client = 1 }, null)</li>
                     <li class="lBorder"><a class="page-scroll" href="#">CONTACT</a></li>
                     <li class="lBorder">@Html.ActionLink("Register", "Login", "Account")</li>
                     <li class="lBorder">@Html.ActionLink("Login", "Login", "Account")</li>
