--- a/DariTn/Views/AssetAdvs/Search.cshtml
+++ b/DariTn/Views/AssetAdvs/Search.cshtml
@@ -40,7 +40,7 @@
                                         Description:  @Html.DisplayFor(modelItem => item.description)
                                         <br /> State:   @Html.DisplayFor(modelItem => item.state)
                                         <br /> City:   @Html.DisplayFor(modelItem => item.city)
-                                        <br /> City:   @Html.DisplayFor(modelItem => item.postalCode)
+                                        <br /> Postal Code:   @Html.DisplayFor(modelItem => item.postalCode)
                                         <br />Price   @Html.DisplayFor(modelItem => item.price)
                                     </p>
 
