--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -110,9 +110,7 @@
                     </li>
                     <li class="lBorder">@Html.ActionLink("Credits", "Index", "Credits", new { client= 1 }, null)</li>
                     <li class="lBorder">@Html.ActionLink("Insurances", "Index", "Insurances", new { client = 1 }, null)</li>
-                    <li class="lBorder"><a class="page-scroll" href="#">CONTACT</a></li>
-                    <li class="lBorder">@Html.ActionLink("Register", "Login", "Account")</li>
-                    <li class="lBorder">@Html.ActionLink("Login", "Login", "Account")</li>
+                    <li class="lBorder">@Html.ActionLink("Logout", "#", "#")</li>
 
 
 
