--- a/DariTn/Views/FurnitureAdvs/Create.cshtml
+++ b/DariTn/Views/FurnitureAdvs/Create.cshtml
@@ -18,6 +18,20 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <br><br>
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        
+            <div class="col-md-10">
+                Image:
+                @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control", @type="file"} })
+                <div class="col-md-offset-2 col-md-10">
+                    
+                </div>
+            </div> 
+       
+        
+  
+
         <div class="col-md-10">
             Furniture Reference:
             @Html.EditorFor(model => model.@ref, new { htmlAttributes = new { @class = "form-control" } })
@@ -53,12 +67,6 @@
             
         </div>
 
-        <div class="col-md-10">
-            Image:
-            @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
-            <br>
-        </div>
 
        
         <div class="form-group">
